chainsaw/3-test/expected.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-001
  namespace: default
  labels:
    app: nginx
    cloud.example.com/dc: ($dc)
    cloud.example.com/env: ($env)
spec:
  ~.(containers):
    ports:
    - containerPort: ($port)
